1.3.0 (not here, probably won't do)
* option to merge the separate mp4 files into one
* option for better splitting on periods, like "..." or file extensions not being split on

1.2.0
* removed the AHK script since it's no longer needed

1.1.0
* switch option for separate image and speech files (image is default, different speech optional; previously reversed)

1.0.2
* option for audio-only output (because that's what I use this for half the time)
* cleaned up the scripts
    * AHK script: realized effects in Kdenlive can be copied by simply dragging it onto another clip, making half this script useless...

1.0.1
* changed default video settings, updated AHK script
* option to replace/generate a single video

1.0.0 "done"
* better command line inputs
* program generates the wav, then png, then mp4 file for each line (instead of *every* wav, then png, then mp4)

0.9.0
* word censoring
* AHK script QoL update: constants at top

0.8.0 "initial release"
* comment splitting
* comment to wav, png, and mp4
    * option for different wav and png inputs
* AHK script for Kdenlive

GitHub: https://github.com/tanksdude/automated-reddit-video-tool